[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=5]
radius = 250.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 10
collision_mask = 12
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="TargetFinder" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetFinder"]
shape = SubResource( 5 )

[node name="Wander" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="TargetFinder" to="." method="_on_TargetFinder_body_entered"]
[connection signal="body_exited" from="TargetFinder" to="." method="_on_TargetFinder_body_exited"]
[connection signal="timeout" from="Wander" to="." method="_on_Wander_timeout"]
